--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
 appdirs==1.4.3
 bcrypt==3.1.3
+certifi==2017.4.17
 cffi==1.10.0
+chardet==3.0.3
 colander==1.3.3
 colorama==0.3.9
 contextlib2==0.5.5
 cornice==2.4.0
 cornice-swagger==0.5.1
-hupper==0.5
+hupper==1.0
+idna==2.5
 iso8601==0.1.11
 jsonpatch==1.15
 jsonpointer==1.10
 jsonschema==2.6.0
 logging-color-formatter==1.0.2
-newrelic==2.86.0.65
+newrelic==2.86.3.70
 packaging==16.8
 PasteDeploy==1.5.2
 psycopg2==2.7.1
@@ -22,16 +25,17 @@ pyramid==1.8.3
 pyramid-multiauth==0.9.0
 pyramid-tm==1.1.1
 python-dateutil==2.6.0
-raven==6.0.0
+raven==6.1.0
 repoze.lru==0.6
-requests==2.14.2
+requests==2.17.3
 simplejson==3.10.0
 six==1.10.0
-SQLAlchemy==1.1.9
+SQLAlchemy==1.1.10
 statsd==3.2.1
 transaction==2.1.2
 translationstring==1.3
 ujson==1.35
+urllib3==1.21.1
 venusian==1.1.0
 waitress==1.0.2
 WebOb==1.7.2
